<resources>
    <string name="app_name">UseCase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_id">Name : </string>
    <string name="email_id">Email : </string>
    <string name="id">Id : </string>
    <string name="mobile">Mobile : </string>
    <string name="gender">Gender : </string>
</resources>