<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Page2Fragment"
    android:id="@+id/fragment_userdetail"
    android:layout_marginStart="20dp"
    android:paddingTop="120dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"
        android:id="@+id/name_"
        android:textColor="@color/black"
        android:text="@string/name_id"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_"
        android:textColor="@color/black"
        android:text="@string/email_id"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/id"
        android:textColor="@color/black"
        android:id="@+id/id_"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/id_"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/mobile"
        android:id="@+id/mobile_"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mobile_"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:id="@+id/gender_"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/name_"
        android:textColor="@color/black"
        android:id="@+id/name"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_left"
        android:textColor="@color/black"
        android:id="@+id/emailId"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailId"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_left"
        android:textColor="@color/black"
        android:id="@+id/id"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/id"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_left"
        android:textColor="@color/black"
        android:id="@+id/mobile"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mobile"
        app:layout_constraintStart_toStartOf="@id/gender_"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/margin_left"
        android:id="@+id/gender"
        android:textSize="@dimen/text_size"
        android:padding="@dimen/padding"/>

</androidx.constraintlayout.widget.ConstraintLayout>
